@startuml
skinparam classAttributeIconSize 0

class Catan 
{
  + {static} Catan(): Catan
}


Catan -> Tablero

class Posicion
{
  + {static} Posicion(): Posicion
}

Tablero -d-> Posicion
Posicion -l-> Lado
Posicion -r-> Vertice
Posicion -d-> Terreno

class Lado
{
  + {static} Lado(): Lado
}

Tablero -d-> Lado

class Vertice
{
  + {static} Vertice(): Vertice
}

Tablero -> Vertice

class Terreno 
{
  + {static} Terreno(): Terreno
}

class Tablero 
{
  + {static} Tablero(): Tablero
  + tirarDados(): Integer
  + construirPoblado(jugador: Jugador, vertice: Vertice): void
  + construirCiudad(jugador: Jugador, vertice: Vertice): void
  + construirCarretera(jugador: Jugador, lado: Lado): void
  + granRutaComercial(jugador: Jugador, lado: Lado): void
  + granCaballeria(cantCaballeros: int): void
  + esGanador(puntos: int): Boolean
}

class ManagerTurno 
{
  + {static} ManagerTurno(): ManagerTurno
  + construirPoblado(jugador: Jugador, vertice: Vertice): void
  + construirCiudad(jugador: Jugador, vertice: Vertice): void
  + construirCarretera(jugador: Jugador, lado: Lado): void
  + siguienteTurno(): void
  + soyGanador(puntos: int): Boolean
}

Tablero -> ManagerTurno

class Jugador
{
  - caballerosJugados: int
  - grano: int
  - ladrillo: int
  - lana: int
  - mineral: int
  - madera: int
  + {static} Jugador(nombre: String): Jugador
  + sosGanador(puntos: int): Boolean
}

ManagerTurno -> Jugador
Jugador ..> Tablero
Tablero ..> Jugador

interface Construccion
{
  - puntos: int
  + {static} Construccion(): Construccion
  + suma(valor: int): int
}

interface CartaDesarrollo
{
  - puntos: int
  + {static} CartaDesarrollo(): CartaDesarrollo
  + suma(valor: int): int
}

Jugador -> Construccion
Jugador -> CartaDesarrollo

class Poblado implements Construccion
{
  + {static} Poblado(): Poblado
}

class Carretera implements Construccion
{
  + {static} Carretera(): Carretera
}

class Ciudad implements Construccion
{
  + {static} Ciudad(): Ciudad
}

class Caballero implements CartaDesarrollo
{
  + {static} Caballero(): Caballero
}

class PuntoDeVictoria implements CartaDesarrollo
{
  + {static} PuntoDeVictoria(): PuntoDeVictoria
}

class Descubrimiento implements CartaDesarrollo
{
  + {static} Descubrimiento(): Descubrimiento
}

class ConstruccionCarretera implements CartaDesarrollo
{
  + {static} ConstruccionCarretera(): ConstruccionCarretera
}

class Monopolio implements CartaDesarrollo
{
  + {static} Monopolio(): Monopolio
}

@enduml

@startuml
skinparam classAttributeIconSize 0

class Nombre {
        - {static} atributoUno : ClaseX
        - atributoDos : ClaseY

        + metodoA() : ClaseY
        + {static} metodoB(param : ClaseZ) : void
}
@enduml